-editTable fix (fixed wrap inside cells) -moved add button to be inline with search bar

--- a/src/app/css/admin.css
+++ b/src/app/css/admin.css
@@ -247,8 +247,10 @@
 }
 
 .checkbox-input {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
+  flex-shrink: 0;   
+  flex-grow: 0;       
   border: 3px solid var(--primaryBlue);
 }
 
